--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
             <h1 style="color: #9e1de4b1;">Olá, eu sou</h1>
             <h1 style="color: #f9f9f9;">Erik Locatelli</h1>
             <h2>Estudante de engenharia de software</h2>
+            <div class="botao"> Acessar curriculo </div>
         </div>
         <div class="cont2">
-            <img src="" alt="">
+            <img src="Sem título.png" alt="">
         </div>
+    </main>
+    <main class="art2">
+            <h1>Sobre Mim</h1>
+            <p>
+                Graduando em engenharia de software e formado como técnico em química pelo Instituto Federal de Santa Catarina. Gigante interesse por 
+                desenvolvimento e tencologia front-end, visando aprender e compreender melhor a área. Breve conhecimento em HTML5, CSS3, JavaScript e NodeJS, entretanto 
+                prestes a iniciar os estudos de React e demais tecnologias. 
+            </p>    
     </main>
 </body>
 </html>
