--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="">Home</a>
             <a href="">Contato</a>
             <a href="">Habilidades</a>
-            <a href="">Projetos</a>
+            <a href="" class="botao">Projetos</a>
         </nav>
     </header>
     <main class="art1">
@@ -24,7 +24,9 @@
             <div class="botao"> Acessar curriculo </div>
         </div>
         <div class="cont2">
-            <img src="Sem título.png" alt="">
+            <div class="imgc">
+                <img src="file.png" alt="">
+            </div>
         </div>
     </main>
     <main class="art2">
