--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo" id="inicio">Portifólio</h1>
+        <h1 class="titulo">Portifólio</h1>
         <nav class="menu">
             <a href="#inicio">Home</a>
-            <a href="">Contato</a>
+            <a href="#contatos">Contato</a>
             <a href="#habilidades">Habilidades</a>
-            <a href="" class="botao">Projetos</a>
+            <a href="projetos.html" class="botao">Projetos</a>
         </nav>
     </header>
     <main class="art1">
@@ -22,7 +22,9 @@
             <h1 style="color: #9e1de4b1;">Olá, eu sou</h1>
             <h1 style="color: #f9f9f9;">Erik Locatelli</h1>
             <h2>Estudante de engenharia de software</h2>
-            <div class="botao"> Acessar curriculo </div>
+            <a href="file:///C:/Users/erik/Downloads/Currículo%20profissional%20-%20Erik%20Locatelli%20.pdf">
+                <div class="botao"> Acessar curriculo </div>
+            </a>
         </div>
         <div class="cont2">
             <div class="imgc">
@@ -73,5 +75,42 @@
             </article>
         </div>
     </main>
+    <footer>
+        <h1 class="destaque" id="contatos">Contatos</h1>
+        <div id="contato">
+            <div class="cont">
+                <i class="fab fa-linkedin"></i>
+                <a href="https://www.linkedin.com/in/erik-locatelli/" target="_blank">
+                    <h2>Linkedin</h2>
+                </a>
+                <p>@eriklocatelli</p>
+            </div>
+            <div class="cont">
+                <i class="fab fa-instagram"></i>
+                <a href="https://www.instagram.com/locatwlli/" target="_blank">
+                    <h2>Instagram</h2>
+                </a>
+                <p>@locatwlli</p>
+            </div>
+            <div class="cont">
+                <i class="fa-solid fa-phone"></i>
+                <h2>Telefone</h2>
+                <p>(47)99235-7244</p>
+            </div>
+            <div class="cont">
+                <i class="far fa-envelope"></i>
+               <h2>Email</h2>
+               <p>erikklocatelli@gmail.com</p>
+            </div>
+            <div class="cont">
+                <i class="fab fa-github"></i>
+                <a href="https://github.com/ErikkLocatelli">
+                    <h2>GitHub</h2>
+                </a>
+                <p>@eriklocatelli</p>
+                    
+             </div>
+        </div>
+    </footer>
 </body>
 </html>
