--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 style="color: #9e1de4b1;">Olá, eu sou</h1>
             <h1 style="color: #f9f9f9;">Erik Locatelli</h1>
             <h2>Estudante de engenharia de software</h2>
-            <a href="file:///C:/Users/erik/Downloads/Currículo%20profissional%20-%20Erik%20Locatelli%20.pdf">
+            <a href="file:///C:/Users/erik/Downloads/Currículo%20profissional%20-%20Erik%20Locatelli%20.pdf" download>
                 <div class="botao"> Acessar curriculo </div>
             </a>
         </div>
