--- a/projetos.html
+++ b/projetos.html
@@ -26,7 +26,7 @@
                     <img src="Captura de tela 2024-04-10 185556.png" alt="">
             </div>
             <div class="imagens-projetos">
-                <a href="" class="links-projetos">
+                <a href="https://erikklocatelli.github.io/Faculdade/mockup" target="_blank" class="links-projetos">
                     <h2>Pág gerenciamento Netflix</h2>
                 </a>
                 <img src="https://m.media-amazon.com/images/I/616QXs8yg0L.png" alt="">
